SMPP+ which is customized by Huawei company can't be decoded
This issue was migrated from bug 2384 in our old bug tracker.
Original bug information:
Reporter: xubo
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: Git
Attachments:
SMPP__customized_by_Huawei.doc: SMPP+ protocol description
smpp.cap: sample capture which includes the smpp+ auth_acc message
packet-smpp.patch: patch to solve this bug
packet-smpp.patch: packet-smpp.patch to solve this bug
smpp_.pdf: smpp+ protocol description
packet-smpp.patch: Revised patch