From Abhik Sarkar via https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=2384 SMPP+ which is customized by Huawei company can't be decoded

From me :
Convert "space tabs" to spaces

svn path=/trunk/; revision=39119